// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FamilyPage Renders a consistent snapshot when empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="my-5"
      >
        <h2>
          Family Profile
        </h2>
        <div
          class="visible"
        >
          <form
            autocomplete="off"
            class="flex flex-col gap-3"
          >
            <input
              autocomplete="false"
              name="hidden"
              style="display: none;"
              type="text"
            />
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Family Name*
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="familyName"
                      class="input w-full"
                      data-cy="input-familyName"
                      data-testid="input-familyName"
                      name="familyName"
                      required=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 1 First Name*
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent1FirstName"
                      class="input w-full"
                      data-cy="input-parent1FirstName"
                      data-testid="input-parent1FirstName"
                      name="parent1FirstName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 1 Last Name*
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent1LastName"
                      class="input w-full"
                      data-cy="input-parent1LastName"
                      data-testid="input-parent1LastName"
                      name="parent1LastName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 1 Phone
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      autocomplete="tel"
                      class="input w-full"
                      data-cy="phone-input-parent1Phone"
                      data-testid="phone-input-parent1Phone"
                      name="parent1Phone"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 2 First Name
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent2FirstName"
                      class="input w-full"
                      data-cy="input-parent2FirstName"
                      data-testid="input-parent2FirstName"
                      name="parent2FirstName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 2 Last Name
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent2LastName"
                      class="input w-full"
                      data-cy="input-parent2LastName"
                      data-testid="input-parent2LastName"
                      name="parent2LastName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 2 Phone
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      autocomplete="tel"
                      class="input w-full"
                      data-cy="phone-input-parent2Phone"
                      data-testid="phone-input-parent2Phone"
                      name="parent2Phone"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Notes
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <textarea
                      aria-labelledby="notes"
                      class="textarea w-full"
                      data-cy="textarea-notes"
                      data-testid="textarea-notes"
                      name="notes"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
                data-cy="submit-form"
                disabled=""
                role="submit"
                type="submit"
              >
                <span>
                  Add
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="my-5"
    >
      <h2>
        Family Profile
      </h2>
      <div
        class="visible"
      >
        <form
          autocomplete="off"
          class="flex flex-col gap-3"
        >
          <input
            autocomplete="false"
            name="hidden"
            style="display: none;"
            type="text"
          />
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Family Name*
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="familyName"
                    class="input w-full"
                    data-cy="input-familyName"
                    data-testid="input-familyName"
                    name="familyName"
                    required=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 1 First Name*
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent1FirstName"
                    class="input w-full"
                    data-cy="input-parent1FirstName"
                    data-testid="input-parent1FirstName"
                    name="parent1FirstName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 1 Last Name*
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent1LastName"
                    class="input w-full"
                    data-cy="input-parent1LastName"
                    data-testid="input-parent1LastName"
                    name="parent1LastName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 1 Phone
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    autocomplete="tel"
                    class="input w-full"
                    data-cy="phone-input-parent1Phone"
                    data-testid="phone-input-parent1Phone"
                    name="parent1Phone"
                    type="tel"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 2 First Name
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent2FirstName"
                    class="input w-full"
                    data-cy="input-parent2FirstName"
                    data-testid="input-parent2FirstName"
                    name="parent2FirstName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 2 Last Name
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent2LastName"
                    class="input w-full"
                    data-cy="input-parent2LastName"
                    data-testid="input-parent2LastName"
                    name="parent2LastName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 2 Phone
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    autocomplete="tel"
                    class="input w-full"
                    data-cy="phone-input-parent2Phone"
                    data-testid="phone-input-parent2Phone"
                    name="parent2Phone"
                    type="tel"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Notes
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <textarea
                    aria-labelledby="notes"
                    class="textarea w-full"
                    data-cy="textarea-notes"
                    data-testid="textarea-notes"
                    name="notes"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
              data-cy="submit-form"
              disabled=""
              role="submit"
              type="submit"
            >
              <span>
                Add
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FamilyPage Renders a consistent snapshot when prefilled with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="my-5 mb-5"
      >
        <h2>
          Finance
        </h2>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="balance"
            >
              Current balance
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                $
                3.00
              </div>
            </div>
          </div>
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="invoices"
            >
              Past invoices
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="italic"
                >
                  No past invoices
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1"
        >
          <button
            class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-600 hover:bg-indigo-500  text-white"
            type="button"
          >
            <span>
              Create invoice
            </span>
          </button>
        </div>
      </div>
      <div
        class="my-5 mb-5"
      >
        <h2>
          Family Information
        </h2>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Associated students
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <a
                  href="/app/students/s1"
                >
                  <span
                    data-testid="family-student-s1"
                  >
                    Johnny
                     
                    Smith
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="my-5"
      >
        <h2>
          Family Profile
        </h2>
        <div
          class="visible"
        >
          <form
            autocomplete="off"
            class="flex flex-col gap-3"
          >
            <input
              autocomplete="false"
              name="hidden"
              style="display: none;"
              type="text"
            />
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Family Name*
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="familyName"
                      class="input w-full"
                      data-cy="input-familyName"
                      data-testid="input-familyName"
                      name="familyName"
                      required=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 1 First Name*
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent1FirstName"
                      class="input w-full"
                      data-cy="input-parent1FirstName"
                      data-testid="input-parent1FirstName"
                      name="parent1FirstName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 1 Last Name*
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent1LastName"
                      class="input w-full"
                      data-cy="input-parent1LastName"
                      data-testid="input-parent1LastName"
                      name="parent1LastName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 1 Phone
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      autocomplete="tel"
                      class="input w-full"
                      data-cy="phone-input-parent1Phone"
                      data-testid="phone-input-parent1Phone"
                      name="parent1Phone"
                      type="tel"
                      value="(555) 444-3333"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 2 First Name
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent2FirstName"
                      class="input w-full"
                      data-cy="input-parent2FirstName"
                      data-testid="input-parent2FirstName"
                      name="parent2FirstName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 2 Last Name
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      aria-labelledby="parent2LastName"
                      class="input w-full"
                      data-cy="input-parent2LastName"
                      data-testid="input-parent2LastName"
                      name="parent2LastName"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Parent 2 Phone
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <input
                      autocomplete="tel"
                      class="input w-full"
                      data-cy="phone-input-parent2Phone"
                      data-testid="phone-input-parent2Phone"
                      name="parent2Phone"
                      type="tel"
                      value="(777) 555-3333"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-1 space-y-8 sm:space-y-0"
            >
              <div
                class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                  for="firstName"
                >
                  Notes
                </label>
                <div
                  class="mt-2 sm:col-span-2 sm:mt-0"
                >
                  <div
                    class="flex sm:max-w-md"
                  >
                    <textarea
                      aria-labelledby="notes"
                      class="textarea w-full"
                      data-cy="textarea-notes"
                      data-testid="textarea-notes"
                      name="notes"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
                data-cy="submit-form"
                disabled=""
                role="submit"
                type="submit"
              >
                <span>
                  Update
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        class="tooltip tooltip-right"
        data-tip="Cannot delete a family with associated students"
      >
        <button
          class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-red-200 text-white hover:text-white"
          data-testid="delete-family"
          disabled=""
          type="button"
        >
          <span>
            Delete family
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="my-5 mb-5"
    >
      <h2>
        Finance
      </h2>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="balance"
          >
            Current balance
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              $
              3.00
            </div>
          </div>
        </div>
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="invoices"
          >
            Past invoices
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="italic"
              >
                No past invoices
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1"
      >
        <button
          class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-600 hover:bg-indigo-500  text-white"
          type="button"
        >
          <span>
            Create invoice
          </span>
        </button>
      </div>
    </div>
    <div
      class="my-5 mb-5"
    >
      <h2>
        Family Information
      </h2>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Associated students
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <a
                href="/app/students/s1"
              >
                <span
                  data-testid="family-student-s1"
                >
                  Johnny
                   
                  Smith
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-5"
    >
      <h2>
        Family Profile
      </h2>
      <div
        class="visible"
      >
        <form
          autocomplete="off"
          class="flex flex-col gap-3"
        >
          <input
            autocomplete="false"
            name="hidden"
            style="display: none;"
            type="text"
          />
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Family Name*
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="familyName"
                    class="input w-full"
                    data-cy="input-familyName"
                    data-testid="input-familyName"
                    name="familyName"
                    required=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 1 First Name*
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent1FirstName"
                    class="input w-full"
                    data-cy="input-parent1FirstName"
                    data-testid="input-parent1FirstName"
                    name="parent1FirstName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 1 Last Name*
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent1LastName"
                    class="input w-full"
                    data-cy="input-parent1LastName"
                    data-testid="input-parent1LastName"
                    name="parent1LastName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 1 Phone
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    autocomplete="tel"
                    class="input w-full"
                    data-cy="phone-input-parent1Phone"
                    data-testid="phone-input-parent1Phone"
                    name="parent1Phone"
                    type="tel"
                    value="(555) 444-3333"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 2 First Name
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent2FirstName"
                    class="input w-full"
                    data-cy="input-parent2FirstName"
                    data-testid="input-parent2FirstName"
                    name="parent2FirstName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 2 Last Name
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    aria-labelledby="parent2LastName"
                    class="input w-full"
                    data-cy="input-parent2LastName"
                    data-testid="input-parent2LastName"
                    name="parent2LastName"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Parent 2 Phone
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <input
                    autocomplete="tel"
                    class="input w-full"
                    data-cy="phone-input-parent2Phone"
                    data-testid="phone-input-parent2Phone"
                    name="parent2Phone"
                    type="tel"
                    value="(777) 555-3333"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-1 space-y-8 sm:space-y-0"
          >
            <div
              class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
                for="firstName"
              >
                Notes
              </label>
              <div
                class="mt-2 sm:col-span-2 sm:mt-0"
              >
                <div
                  class="flex sm:max-w-md"
                >
                  <textarea
                    aria-labelledby="notes"
                    class="textarea w-full"
                    data-cy="textarea-notes"
                    data-testid="textarea-notes"
                    name="notes"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
              data-cy="submit-form"
              disabled=""
              role="submit"
              type="submit"
            >
              <span>
                Update
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="tooltip tooltip-right"
      data-tip="Cannot delete a family with associated students"
    >
      <button
        class="flex flex-row justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-red-200 text-white hover:text-white"
        data-testid="delete-family"
        disabled=""
        type="button"
      >
        <span>
          Delete family
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
